Syndicati - Integration WIP & Fixes
Changelog:

-Partial Integration of Forum
-Partial Integration of Reclamation
-Partial Integration of User
-Fixes & Enhancements Visually